--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -5,24 +5,34 @@
 
         <div class="post">
 
+            {% if request.user == post.author %}
+            <button type="button" class="btn btn-primary rounded-circle btn-icon-only">
+                <span class="btn-inner--icon">
+                    <a class="text-white" href="{% url 'post_edit'  pk=post.pk %}">Edit </a>
+                </span>
+            </button>
+            <button type="button" class="btn btn-danger rounded-circle btn-icon-only">
+                <span class="btn-inner--icon">
+                    <a  href="{% url 'post_remove'  pk=post.pk %}">  <i class="far fa-trash-alt text-white"></i></a>
+                </span>
+            </button>
+            <br>
+            <br>
+            {% endif %}    
+            <h2><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h2>
+            
+			<img src="{{ post.hotel_Main_Img.url }}" alt="" class="" style= height:300px; weight:200px; >
+            <p>{{ post.text|linebreaksbr }}</p>
+			<div class="fb-like" data-href="http://127.0.0.1:8000/post/{{post.pk}}/" data-width="" data-layout="button_count" data-action="like" data-size="large" data-share="true"></div>
+
+			<div class="fb-comments" data-href="http://127.0.0.1:8000/post/{{post.pk}}/" data-numposts="1" data-width="100%"></div>
+
             {% if post.published_date %}
             <div class="date">
                 <p>published: {{ post.published_date }}</p>
             </div>
 
             {% endif %}
-
-            {% if request.user == post.author %}
-            <a class="btn btn-default" href="{% url 'post_edit'  pk=post.pk %}"> <span class="glyphicon glyphicon-pencil"></span class> </a>
-            <a class="btn btn-default" href="{% url 'post_remove'  pk=post.pk %}"> <span class="glyphicon glyphicon-remove"></span class> </a>
-
-            {% endif %}    
-            <h2><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h2>
-            <p>{{ post.text|linebreaksbr }}</p>
-			<img src="{{ post.hotel_Main_Img.url }}" alt="" class="" style= height:300px; weight:200px; >
-
-
-            
         </div>
 
 {% endblock %}
