--- a/blog/templates/blog/post_edit.html
+++ b/blog/templates/blog/post_edit.html
@@ -6,7 +6,7 @@
     <form method="POST" class="post-form">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit" class="btn btn-default save">Save</button>
+        <button type="submit" class="btn btn-info">Save</button>
 
     </form>
 
