--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,6 +1,7 @@
 {% extends 'blog/base.html' %}
 
 {% block containt %}	
+<div style="height:700px;width:100%;overflow:scroll;overflow-x:hidden;overflow-y:scroll;">
 
 			
     {% for post in posts %}
@@ -23,18 +24,11 @@
 		  </div>
 		  <br>
 			<img src="{{ post.hotel_Main_Img.url }}" alt="" class=""  style=width:100%;>
-			<button type="button" class="btn btn-sm px-0 font-weight-bold btn-link text-primary btn-icon">
-				<div class="icon bg-gradient-primary text-white rounded-circle icon-shape hover-rotate-360">
-					<i class="far fa-heart"></i>
-				</div>
-			  </button>
-			  <button type="button" class="btn btn-sm px-0 font-weight-bold btn-link text-primary btn-icon">
-				
-				<div class="icon bg-gradient-primary text-white rounded-circle icon-shape hover-rotate-360">
-					<i class="far fa-comment"></i>
-				</div>
-			  </button>
+			<br>
+			<br>
+			<div class="fb-like" data-href="http://127.0.0.1:8000/post/{{post.pk}}/" data-width="" data-layout="button_count" data-action="like" data-size="large" data-share="true"></div>
 			<p>{{ post.text|linebreaksbr }}</p>
+			<div class="fb-comments" data-href="http://127.0.0.1:8000/post/{{post.pk}}/" data-numposts="1" data-width="100%"></div>
 			<div class="date">
                 <p>published: {{ post.published_date }}</p>
             </div>
@@ -44,5 +38,5 @@
 	
 	{% endfor %}
 
-
+</div>
 {% endblock %}
